// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`definition for avatar matches the snapshot > avatar 1`] = `
{
  "events": [],
  "functions": [],
  "name": "Avatar",
  "properties": [
    {
      "name": "initials",
      "optional": true,
      "type": "string",
    },
  ],
  "regions": [],
  "releaseStatus": "stable",
}
`;

exports[`definition for loading-bar matches the snapshot > loading-bar 1`] = `
{
  "events": [],
  "functions": [],
  "name": "LoadingBar",
  "properties": [
    {
      "inlineType": {
        "name": "LoadingBarProps.Variant",
        "type": "union",
        "values": [
          "gen-ai",
          "gen-ai-masked",
        ],
      },
      "name": "variant",
      "optional": false,
      "type": "string",
    },
  ],
  "regions": [],
  "releaseStatus": "stable",
}
`;
